chore: Clean up epoch consensus code
Remove unused fields and methods from epoch consensus classes:
- BestSolutionSelector: Remove 45 lines of unused code
- EpochContext: Remove unused fields
- EpochTimer: Simplify and clean up
- SolutionCollector: Remove unused methods
- SubmitResult: Simplify result handling

🤖 Generated with [Claude Code](https://claude.com/claude-code)

Co-Authored-By: Claude <noreply@anthropic.com>